# QualityChecker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
QualityChecker/: DataQuality.py  checks.py  conf.py  main.py  pyproject.toml  requirements.txt
QualityChecker/reports/: DEV_report_2024-08-08_17-42.xlsx  DEV_report_2024-08-12_13-59.xlsx  DEV_report_2024-08-12_14-01.xlsx
QualityChecker/sql/DQ/ansi/: check_bussines_key_counts.sql  check_max_length.sql  check_max_tech_load_ts.sql  check_not_nulls_columns.sql  check_pk_doubles.sql  check_row_count.sql
QualityChecker/sql/DQ/greenplum/: check_max_length.sql  check_not_nulls_columns.sql  check_not_utf8.sql  check_segmentation.sql  select_columns_length_statistics.sql  select_most_consistent_value.sql
QualityChecker/sql/DQ/vertica/: check_max_length.sql  check_not_nulls_columns.sql  select_columns_length_statistics.sql  select_most_consistent_value.sql
QualityChecker/sql/work_with_meta/greenplum/: analyze_statistics.sql  select_all_columns.sql  select_business_columns.sql  select_primary_key_columns.sql
QualityChecker/sql/work_with_meta/vertica/: analyze_statistics.sql
QualityChecker/test/: check_max_length_test.py  to_flat_list_test.py
QualityChecker/utils/: databaseTools.py  utils.py
